--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
   <head>
@@ -46,24 +47,24 @@
 
 <p>Você tem a liberdade de:</p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/1b.png" alt="">   Compartilhar — copiar, distribuir e transmitir a obra.</p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/1b.png" alt="">   <b>Compartilhar</b> — copiar, distribuir e transmitir a obra.</p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/2.png" alt="">   Remixar — criar obras derivadas.</p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/2.png" alt="">   <b>Remixar</b> — criar obras derivadas.</p>
 
 <p>Sob as seguintes condições:</p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/3.png" alt="">  Atribuição — Você deve creditar a obra da forma especificada pelo autor ou licenciante (mas não de maneira que sugira que estes concedem qualquer aval a você ou ao seu uso da obra). </p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/3.png" alt="">  <b>Atribuição</b> — Você deve creditar a obra da forma especificada pelo autor ou licenciante (mas não de maneira que sugira que estes concedem qualquer aval a você ou ao seu uso da obra). </p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/4.png" alt="">  Compartilhamento pela mesma licença — Se você alterar, transformar ou criar em cima desta obra, você poderá distribuir a obra resultante apenas sob a mesma licença, ou sob uma licença similar à presente. </p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/4.png" alt="">  <b>Compartilhamento pela mesma licença</b> — Se você alterar, transformar ou criar em cima desta obra, você poderá distribuir a obra resultante apenas sob a mesma licença, ou sob uma licença similar à presente. </p>
 
 <p>Ficando claro que:
-Renúncia — Qualquer das condições acima pode ser <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/br/deed.pt_BR#">renunciada</a> se você obtiver permissão do titular dos direitos autorais. 
-Domínio Público — Onde a obra ou qualquer de seus elementos estiver em <a href="http://wiki.creativecommons.org/Public_domain">domínio público</a> sob o direito aplicável, esta condição não é, de maneira alguma, afetada pela licença. 
-Outros Direitos — Os seguintes direitos não são, de maneira alguma, afetados pela licença: 
+<b>Renúncia</b> — Qualquer das condições acima pode ser <a href="http://creativecommons.org/licenses/by-nc-sa/2.5/br/deed.pt_BR#">renunciada</a> se você obtiver permissão do titular dos direitos autorais. 
+<b>Domínio Público</b> — Onde a obra ou qualquer de seus elementos estiver em <a href="http://wiki.creativecommons.org/Public_domain">domínio público</a> sob o direito aplicável, esta condição não é, de maneira alguma, afetada pela licença. 
+<b>Outros Direitos</b> — Os seguintes direitos não são, de maneira alguma, afetados pela licença: 
 Limitações e exceções aos direitos autorais ou quaisquer <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#Do_Creative_Commons_licenses_affect_fair_use.2C_fair_dealing_or_other_exceptions_to_copyright.3F">usos livres</a> aplicáveis; 
 Os <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#I_don.E2.80.99t_like_the_way_a_person_has_used_my_work_in_a_derivative_work_or_included_it_in_a_collective_work.3B_what_can_I_do.3F">direitos morais</a> do autor; 
 Direitos que outras pessoas podem ter sobre a obra ou sobre a utilização da obra, tais como <a href="http://wiki.creativecommons.org/Frequently_Asked_Questions#When_are_publicity_rights_relevant.3F">direitos de imagem</a> ou privacidade. 
-Aviso — Para qualquer reutilização ou distribuição, você deve deixar claro a terceiros os termos da licença a que se encontra submetida esta obra. A melhor maneira de fazer isso é com um link para esta página. </p>
+<b>Aviso</b> — Para qualquer reutilização ou distribuição, você deve deixar claro a terceiros os termos da licença a que se encontra submetida esta obra. A melhor maneira de fazer isso é com um link para esta página. </p>
 
 <h1>
 <a name="2---introdu%C3%A7%C3%A3o-ao-sistema-e-cidade" class="anchor" href="#2---introdu%C3%A7%C3%A3o-ao-sistema-e-cidade"><span class="octicon octicon-link"></span></a>2 - Introdução ao Sistema e-cidade</h1>
@@ -87,7 +88,7 @@ O sistema possui a seguinte plataforma tecnológica:</p>
 JAVA TOMCAT
 <br>ECLIPSE<br></p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/5.png" alt="">  </p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/5.png" alt="">  </p>
 
 <h1>
 <a name="3---instala%C3%A7%C3%A3o-do-sistema" class="anchor" href="#3---instala%C3%A7%C3%A3o-do-sistema"><span class="octicon octicon-link"></span></a>3 - Instalação do Sistema</h1>
@@ -95,10 +96,7 @@ JAVA TOMCAT
 <h2>
 <a name="31---informa%C3%A7%C3%B5es-gerais-para-instala%C3%A7%C3%A3o" class="anchor" href="#31---informa%C3%A7%C3%B5es-gerais-para-instala%C3%A7%C3%A3o"><span class="octicon octicon-link"></span></a>3.1 - Informações gerais para instalação</h2>
 
-<p>É recomendado que este guia seja executado por um usuário com experiência em instalação de pacotes no Linux e configuração básica de Apache, PHP e PostgreSQL. 
-Este roteiro está baseado no Sistema Operacional GNU/Linux Ubuntu 10.04 LTS. Cabe lembrar que em outras distribuições Linux o processo de instalação pode variar.
-Este manual pressupõe que o servidor de aplicação Web e o banco de dados estarão instalados no mesmo servidor. 
-Neste guia, sempre que necessário editar algum arquivo, será usado o editor de texto GEDIT. Mas cabe lembrar que é apenas uma opção, existem outros editores como o VIM.</p>
+<p>É recomendado que este guia seja executado por um usuário com experiência em instalação de pacotes no Linux e configuração básica de Apache, PHP e PostgreSQL.<br><br>Este roteiro está baseado no Sistema Operacional GNU/Linux Ubuntu 10.04 LTS. Cabe lembrar que em outras distribuições Linux o processo de instalação pode variar.<br><br>Este manual pressupõe que o servidor de aplicação Web e o banco de dados estarão instalados no mesmo servidor.<br><br>Neste guia, sempre que necessário editar algum arquivo, será usado o editor de texto GEDIT. Mas cabe lembrar que é apenas uma opção, existem outros editores como o VIM.</p>
 
 <h1>
 <a name="4---passo-a-passo-da-instala%C3%A7%C3%A3o" class="anchor" href="#4---passo-a-passo-da-instala%C3%A7%C3%A3o"><span class="octicon octicon-link"></span></a>4 - Passo-a-passo da Instalação</h1>
@@ -116,9 +114,9 @@ Neste guia, sempre que necessário editar algum arquivo, será usado o editor de
 <br><code>Timeout 12000</code></p>
 
 <p>Além disso, adicione as seguintes linhas ao final desse arquivo:
-<br><code># linhas adicionadas para o e-cidade</code>
-<br><code>LimitRequestLine 16382</code>
-<br><code>LimitRequestFieldSize 16382</code></p>
+<br><code># linhas adicionadas para o e-cidade
+<br>LimitRequestLine 16382
+<br>LimitRequestFieldSize 16382</code></p>
 
 <p>Agora, altere o arquivo /etc/apache2/conf.d/charset. Usando o gedit faça assim:
 <br><code>sudo gedit /etc/apache2/conf.d/charset</code></p>
@@ -209,7 +207,7 @@ Para conseguir baixar essa versão, edite o arquivo /etc/apt/sources.list:
 
 <p>Veja se o comando retorna o seguinte resultado: </p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/6.png" alt="">  </p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/6.png" alt="">  </p>
 
 <p>No caso acima precisamos recriar o cluster executando os próximos passos:</p>
 
@@ -236,7 +234,7 @@ Para conseguir baixar essa versão, edite o arquivo /etc/apt/sources.list:
 <p>Novamente, verifique o encoding do cluster:
 <br><code>psql -U postgres -hlocalhost -l</code></p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/7.png" alt="">  </p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/7.png" alt="">  </p>
 
 <p><strong><em>ATENÇÃO! Se o resultado do seu comando foi a tabela mostrada acima, pule os próximos passos, indo direto para a parte “Configurando o PostgreSQL 8.2”. Caso o resultado do comando seja algo diferente da tabela acima, então o sistema operacional instalado está sem suporte ao encoding LATIN1. Assim, será necessário realizar os passos abaixo:</em></strong></p>
 
@@ -276,7 +274,7 @@ Para conseguir baixar essa versão, edite o arquivo /etc/apt/sources.list:
 
 <p>O resultado deve ser o seguinte:</p>
 
-<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/7.png" alt="">  </p>
+<p><img src="https://raw.github.com/marcuslobo/manualecidades/master/imagens/7.png" alt="">  </p>
 
 <p><strong>Configurando o PostgreSQL 8.2</strong>
 É necessário modificar o arquivo postgresql.conf:
