--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@ JAVA TOMCAT
 <br><code>Timeout 12000</code></p>
 
 <p>Além disso, adicione as seguintes linhas ao final desse arquivo:
-<br><code># linhas adicionadas para o e-cidade
-<br>LimitRequestLine 16382
-<br>LimitRequestFieldSize 16382</code></p>
+<code><br># linhas adicionadas para o e-cidade</br>
+<br>LimitRequestLine 16382</br>
+<br>LimitRequestFieldSize 16382</br></code></p>
 
 <p>Agora, altere o arquivo /etc/apache2/conf.d/charset. Usando o gedit faça assim:
 <br><code>sudo gedit /etc/apache2/conf.d/charset</code></p>
