--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ PostgreSQL:
 
 <p>Na tela de login do e-cidade informar o usuário “dbseller” e deixar a senha em branco.</p>
 
-<p><code>**ATENÇÃO! Para correto funcionamento do e-cidade, o Firefox deve estar com as janelas “pop-up” desbloqueadas para o IP do Servidor.**</code></p>
+<p><b>**ATENÇÃO! Para correto funcionamento do e-cidade, o Firefox deve estar com as janelas “pop-up” desbloqueadas para o IP do Servidor.**<b></p>
 
 <p><b>Compatibilidade das versões do Firefox:<b></p>
 
