--- a/index.html
+++ b/index.html
@@ -413,19 +413,14 @@ PostgreSQL:
 
 <p>Se você optou por instalar o ambiente gráfico, então basta abrir o navegador Firefox e acessar o seguinte endereço:</p>
 
-<p><code>http://localhost/e-cidade</code></p>
-
-<p>Caso você tenha instalado o servidor sem ambiente gráfico, então apartir de um computador desktop abra o navegador Firefox e acesse o seguinte endereço:</p>
-
-<p><code>http://&lt;ip_do_servidor&gt;/e-cidade</code></p>
-
 <p><code>Onde “ip_do_servidor” indica o entereço IP atribuído na instalação do servidor Ubuntu.</code></p>
 
 <p>Na tela de login do e-cidade informar o usuário “dbseller” e deixar a senha em branco.</p>
 
-<p><b>**ATENÇÃO! Para correto funcionamento do e-cidade, o Firefox deve estar com as janelas “pop-up” desbloqueadas para o IP do Servidor.**</b></p>
+<p><b>ATENÇÃO! Para correto funcionamento do e-cidade, o Firefox deve estar com as janelas “pop-up” desbloqueadas para o IP do Servidor.
+</b></p>
 
-<p><b>Compatibilidade das versões do Firefox:<b></p>
+<p><b>Compatibilidade das versões do Firefox:</b></p>
 
 <p>O e-cidade é compatível com a versão 3.0 ou inferior do Mozilla Firefox.</p>
 
